# mdma

./: .gitignore  CHANGELOG.md  CHANGELOG_PL.md  README.md
extension/: background.js  foreground.js  index-BmWsMfXY.js  manifest.json  middleground.js  popup.html  popup.js  popup_js.js  popup_module.js
extension/assets/: popup-1LIZ4gCT.wasm  popup-CUcwwp7T.wasm
extension/styles/: interface.css  mdma.css  windows.css
src/: .gitignore  example-rollup.config.js  package.json
src/dev-extension/: manifest.json  popup.html
src/extension-workspace/: Cargo.toml  rust-toolchain.toml
src/extension-workspace/src/backend/: Cargo.toml  build.rs  macros.rs  main.rs  new_subscription.js  types.rs
src/extension-workspace/src/backend/app_state/: client.rs  connections.rs  mod.rs
src/extension-workspace/src/backend/auth/: jwt.rs  mod.rs
src/extension-workspace/src/backend/discord_bot/: mod.rs
src/extension-workspace/src/backend/discord_bot/commands/: helpers.rs
src/extension-workspace/src/backend/routes/: callback.rs  login.rs  mod.rs  ws.rs
src/extension-workspace/src/background/: Cargo.toml  background.js  connection.rs  exports.rs  foreground_module.js  lib.rs  task.rs  types.rs
src/extension-workspace/src/background/dispatcher/: mod.rs  port.rs
src/extension-workspace/src/common/: Cargo.toml  build.rs  file_names.rs  lib.rs
src/extension-workspace/src/common/connection/: mod.rs
src/extension-workspace/src/common/error/: mod.rs
src/extension-workspace/src/common/js_imports/: mod.rs
src/extension-workspace/src/common/log/: mod.rs
src/extension-workspace/src/common/macros/: mod.rs
src/extension-workspace/src/common/messaging/: mod.rs  validator.rs
src/extension-workspace/src/common/web_extension_sys/: action.rs  cookies.rs  debugger.rs  mod.rs  scripting.rs  tabs.rs  windows.rs
src/extension-workspace/src/common/web_extension_sys/identity/: mod.rs
src/extension-workspace/src/common/web_extension_sys/runtime/: mod.rs  port.rs
src/extension-workspace/src/common/web_extension_sys/storage/: mod.rs
src/extension-workspace/src/foreground/: Cargo.toml  color_mark.rs  disable_items.rs  dispatcher.rs  lib.rs  pathfinder.rs
src/extension-workspace/src/foreground/addon_window/: decors.rs  mod.rs  ui_components.rs
src/extension-workspace/src/foreground/addons/: mod.rs
src/extension-workspace/src/foreground/addons/accept_group/: html.rs  mod.rs
src/extension-workspace/src/foreground/addons/accept_summon/: html.rs  mod.rs
src/extension-workspace/src/foreground/addons/adaptive_builds/: html.rs  mod.rs
src/extension-workspace/src/foreground/addons/anty_duch/: html.rs  mod.rs
src/extension-workspace/src/foreground/addons/better_group_invites/: html.rs  mod.rs
src/extension-workspace/src/foreground/addons/better_messages/: html.rs  mod.rs
src/extension-workspace/src/foreground/addons/better_who_is_here/: html.rs  mod.rs
src/extension-workspace/src/foreground/addons/grounded_mob_timers/: html.rs  mod.rs
src/extension-workspace/src/foreground/addons/hero_neon/: html.rs  mod.rs
src/extension-workspace/src/foreground/addons/kastrat/: html.rs  mod.rs
src/extension-workspace/src/foreground/addons/online_peers/: html.rs  mod.rs
src/extension-workspace/src/foreground/addons/smart_forge/: html.rs  mod.rs
src/extension-workspace/src/foreground/addons/znacznik/: descriptors.rs  html.rs  mod.rs
src/extension-workspace/src/foreground/bindings/: api.rs  mod.rs
src/extension-workspace/src/foreground/bindings/engine/: battle.rs  chat.rs  communication.rs  disable_items.rs  hero.rs  hero_eq.rs  idle_json.rs  iframe_window.rs  interface.rs  items.rs  items_mark.rs  lock_manager.rs  log_off.rs  map.rs  mod.rs  other.rs  others.rs  party.rs  peer.rs  renderer.rs  settings.rs  show_eq.rs  skills.rs  steps_to_send.rs  targets.rs  types.rs  who_is_here.rs
src/extension-workspace/src/foreground/globals/: addons.rs  collisions.rs  emitter.rs  hero.rs  hero_settings.rs  items.rs  mod.rs  npcs.rs  others.rs  party.rs  peers.rs  players_online.rs  premium.rs  town.rs  world_config.rs
src/extension-workspace/src/foreground/globals/port/: mod.rs  task.rs
src/extension-workspace/src/foreground/interface/: addons.rs  dom_utils.rs  mod.rs  tips_parser.rs  window.rs
src/extension-workspace/src/foreground/macros/: mod.rs
src/extension-workspace/src/foreground/utils/: dominator_helpers.rs  logging.rs  mod.rs  window_events.rs
src/extension-workspace/src/popup/: Cargo.toml  dispatcher.rs  exports.rs  lib.rs  popup.js
src/extract_filenames/: Cargo.toml
src/extract_filenames/src/: main.rs
src/proc_macros/: Cargo.toml  rust-toolchain.toml
src/proc_macros/src/: lib.rs
test-extension/: background.js  index-BL9VTdYh.js  manifest.json  popup.html
test-extension/assets/: popup-lkm0fnkP.wasm
