[workspace]
members = [
  "src/background",
  "src/foreground",
  "src/popup",
  "src/common",
  "src/backend",
]
resolver = "2"

[workspace.package]
version = "0.15.0-beta.5"
authors = ["Libit"]
edition = "2024"
description = "MDMA - Multipurpose Discord to Margonem Addons"
repository = "https://github.com/LibitGit/mdma"

[workspace.dependencies]
# utilities
proc_macros = { path = "../proc_macros" }
common = { path = "src/common" }
console_error_panic_hook = "0.1.7"
itertools = "0.14.0"
uuid = { version = "^1.17.0", features = ["v4", "serde"] }
scopeguard = "1.2.0"
gloo-net = "0.6.0"
anyhow = "1.0.98"

# web framework
axum = { version = "0.8.4", features = ["ws"] }

# async
wasm-bindgen-futures = "0.4.50"
futures = "0.3.31"
futures-signals = { version = "0.3.34" }
pin-project = "1.1.8"

# serialization
serde = { version = "1.0.219", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
serde_repr = "0.1.20"
serde_json = "1.0.140"
serde_with = "3.14.0"

# encoding
obfstr = "0.4.4"
base64 = "0.22.1"

# html
dominator = "0.5.38"
discard = "1.0.4"

# bindings
wasm-bindgen = { version = "0.2.100", features = [
  "enable-interning",
  "strict-macro",
] }
js-sys = "0.3.77"
web-sys = "0.3.77"

[patch.crates-io]
futures-signals = { path = "../../../rust-signals" }

[profile.release]
lto = true
strip = true
debug = 0
codegen-units = 1
panic = "abort"
opt-level = "s"
incremental = false

# [lints.rust.unexpected_cfgs]
# level = "warn"
# priority = 0
# check-cfg = ["cfg(wasm_bindgen_unstable_test_coverage)"]
